// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CampaignTemplateCard /> should render 1`] = `
<div
  className="card h-100 rounded-lg campaign-template-card"
>
  <div
    className="bg-cover bg-gray-900 w-100 campaign-template-card-image"
    data-test-id="campaign-template-card-image"
    style={
      Object {
        "backgroundImage": "url(http://foo.com/bar.jpg)",
        "backgroundPosition": "center",
        "height": 0,
        "paddingBottom": "50%",
      }
    }
  />
  <div
    className="p-3 d-flex h-100 flex-column justify-content-between"
  >
    <div>
      <h4
        data-test-id="campaign-template-card-title"
      >
        Create your own
      </h4>
      <div
        className="text-sm"
        data-test-id="campaign-template-card-description"
      >
        Don't use a template, do your own thing.
      </div>
    </div>
    <div>
      <Button
        className="mt-3"
        data-test-id="campaign-template-card-button"
        isDisabled={false}
        onClick={[Function]}
        size="lg"
        theme="primary"
      >
        Use this template
      </Button>
    </div>
  </div>
</div>
`;

exports[`<CampaignTemplateCard /> should render when isSelected 1`] = `
<div
  className="card h-100 rounded-lg campaign-template-card--selected campaign-template-card"
>
  <div
    className="bg-cover bg-gray-900 w-100 campaign-template-card-image"
    data-test-id="campaign-template-card-image"
    style={
      Object {
        "backgroundImage": "url(http://foo.com/bar.jpg)",
        "backgroundPosition": "center",
        "height": 0,
        "paddingBottom": "50%",
      }
    }
  />
  <div
    className="p-3 d-flex h-100 flex-column justify-content-between"
  >
    <div>
      <h4
        data-test-id="campaign-template-card-title"
      >
        Create your own
      </h4>
      <div
        className="text-sm"
        data-test-id="campaign-template-card-description"
      >
        Don't use a template, do your own thing.
      </div>
    </div>
    <div>
      <Button
        className="mt-3"
        data-test-id="campaign-template-card-button"
        icon="approvalTick"
        isDisabled={true}
        onClick={[Function]}
        size="lg"
        theme="primary"
      >
        Selected
      </Button>
    </div>
  </div>
</div>
`;
